semi camera-ready

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,29 @@
 ﻿.idea
-sentiment/sentiment_train/multi_domain_sentiment_dataset/processed_stars/books
+*.pyc
+sentiment/imdb/multi_domain_sentiment_dataset/processed_stars/books
 main.py
 sentiment/__pycache__
-sentiment/sentiment_train/imdb50k/dataset_cleaned.json
-sentiment/sentiment_train/imdb50k/dataset_raw.csv
-sentiment/stanford_sentiment_treebank_sources/dictionary.txt
-sentiment/stanford_sentiment_treebank_sources/datasetSplit.txt
-sentiment/stanford_sentiment_treebank_sources/phrase_sentiments.json
-sentiment/stanford_sentiment_treebank_sources/sentences_tokens.json
-sentiment/stanford_sentiment_treebank_sources/sentiment_labels.txt
-sentiment/stanford_sentiment_treebank_sources/SOStr.txt
-sentiment/sentiment_train/multi_domain_sentiment_dataset/processed_acl/books
-sentiment/sentiment_train/multi_domain_sentiment_dataset/processed_acl/dvd
-sentiment/sentiment_train/multi_domain_sentiment_dataset/processed_acl/electronics
-sentiment/sentiment_train/multi_domain_sentiment_dataset/processed_acl/kitchen
-sentiment/sentiment_train/multi_domain_sentiment_dataset/processed_stars/dvd
-sentiment/sentiment_train/multi_domain_sentiment_dataset/processed_stars/electronics
-sentiment/sentiment_train/multi_domain_sentiment_dataset/processed_stars/kitchen
+sentiment/imdb/imdb50k/dataset_cleaned.json
+sentiment/imdb/imdb50k/dataset_raw.csv
+datasets_ours/sst/dictionary.txt
+datasets_ours/sst/datasetSplit.txt
+datasets_ours/sst/phrase_sentiments.json
+datasets_ours/sst/sentences_tokens.json
+datasets_ours/sst/sentiment_labels.txt
+datasets_ours/sst/SOStr.txt
+sentiment/imdb/multi_domain_sentiment_dataset/processed_acl/books
+sentiment/imdb/multi_domain_sentiment_dataset/processed_acl/dvd
+sentiment/imdb/multi_domain_sentiment_dataset/processed_acl/electronics
+sentiment/imdb/multi_domain_sentiment_dataset/processed_acl/kitchen
+sentiment/imdb/multi_domain_sentiment_dataset/processed_stars/dvd
+sentiment/imdb/multi_domain_sentiment_dataset/processed_stars/electronics
+sentiment/imdb/multi_domain_sentiment_dataset/processed_stars/kitchen
+/models/sst/
+/models/news/
+/datasets_ours/news/czech_text_document_corpus_v20/
+/baselines/sst2_bert_base/
+/baselines/sst2_bert_large/
+/baselines/sst2_bert_medium/
+/baselines/sst2_bert_mini/
+/baselines/sst2_bert_small/
+/attrs/
